wx-core/include/generated/ffi_c.h

// CLASS: wxCalculateLayoutEvent
wxClassInfo *wxCalculateLayoutEvent_CLASSINFO();
wxCalculateLayoutEvent *wxCalculateLayoutEvent_new(wxWindowID id);
int wxCalculateLayoutEvent_GetFlags(const wxCalculateLayoutEvent * self);
wxRect *wxCalculateLayoutEvent_GetRect(const wxCalculateLayoutEvent * self);
void wxCalculateLayoutEvent_SetFlags(wxCalculateLayoutEvent * self, int flags);
void wxCalculateLayoutEvent_SetRect(wxCalculateLayoutEvent * self, const wxRect * rect);
// CLASS: wxCalendarCtrl
wxClassInfo *wxCalendarCtrl_CLASSINFO();
bool wxCalendarCtrl_SetDateRange(wxCalendarCtrl * self, const wxDateTime * lowerdate, const wxDateTime * upperdate);
bool wxCalendarCtrl_GetDateRange(const wxCalendarCtrl * self, wxDateTime * lowerdate, wxDateTime * upperdate);
wxCalendarCtrl *wxCalendarCtrl_new();
wxCalendarCtrl *wxCalendarCtrl_new1(wxWindow * parent, wxWindowID id, const wxDateTime * date, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
bool wxCalendarCtrl_Create(wxCalendarCtrl * self, wxWindow * parent, wxWindowID id, const wxDateTime * date, const wxPoint * pos, const wxSize * size, long style, const wxString * name);
void wxCalendarCtrl_EnableHolidayDisplay(wxCalendarCtrl * self, bool display);
bool wxCalendarCtrl_EnableMonthChange(wxCalendarCtrl * self, bool enable);
void wxCalendarCtrl_EnableYearChange(wxCalendarCtrl * self, bool enable);
wxCalendarDateAttr * wxCalendarCtrl_GetAttr(const wxCalendarCtrl * self, size_t day);
wxDateTime *wxCalendarCtrl_GetDate(const wxCalendarCtrl * self);
wxColour *wxCalendarCtrl_GetHeaderColourBg(const wxCalendarCtrl * self);
wxColour *wxCalendarCtrl_GetHeaderColourFg(const wxCalendarCtrl * self);
wxColour *wxCalendarCtrl_GetHighlightColourBg(const wxCalendarCtrl * self);
wxColour *wxCalendarCtrl_GetHighlightColourFg(const wxCalendarCtrl * self);
wxColour *wxCalendarCtrl_GetHolidayColourBg(const wxCalendarCtrl * self);
wxColour *wxCalendarCtrl_GetHolidayColourFg(const wxCalendarCtrl * self);
void wxCalendarCtrl_ResetAttr(wxCalendarCtrl * self, size_t day);
void wxCalendarCtrl_SetAttr(wxCalendarCtrl * self, size_t day, wxCalendarDateAttr * attr);
bool wxCalendarCtrl_SetDate(wxCalendarCtrl * self, const wxDateTime * date);
void wxCalendarCtrl_SetHeaderColours(wxCalendarCtrl * self, const wxColour * col_fg, const wxColour * col_bg);
void wxCalendarCtrl_SetHighlightColours(wxCalendarCtrl * self, const wxColour * col_fg, const wxColour * col_bg);
void wxCalendarCtrl_SetHoliday(wxCalendarCtrl * self, size_t day);
void wxCalendarCtrl_SetHolidayColours(wxCalendarCtrl * self, const wxColour * col_fg, const wxColour * col_bg);
void wxCalendarCtrl_Mark(wxCalendarCtrl * self, size_t day, bool mark);
// CLASS: wxCalendarDateAttr
void wxCalendarDateAttr_delete(wxCalendarDateAttr *self);
wxColour *wxCalendarDateAttr_GetBackgroundColour(const wxCalendarDateAttr * self);
wxColour *wxCalendarDateAttr_GetBorderColour(const wxCalendarDateAttr * self);
wxFont *wxCalendarDateAttr_GetFont(const wxCalendarDateAttr * self);
wxColour *wxCalendarDateAttr_GetTextColour(const wxCalendarDateAttr * self);
bool wxCalendarDateAttr_HasBackgroundColour(const wxCalendarDateAttr * self);
bool wxCalendarDateAttr_HasBorder(const wxCalendarDateAttr * self);
bool wxCalendarDateAttr_HasBorderColour(const wxCalendarDateAttr * self);
bool wxCalendarDateAttr_HasFont(const wxCalendarDateAttr * self);
bool wxCalendarDateAttr_HasTextColour(const wxCalendarDateAttr * self);
bool wxCalendarDateAttr_IsHoliday(const wxCalendarDateAttr * self);
void wxCalendarDateAttr_SetBackgroundColour(wxCalendarDateAttr * self, const wxColour * col_back);
void wxCalendarDateAttr_SetBorderColour(wxCalendarDateAttr * self, const wxColour * col);
void wxCalendarDateAttr_SetFont(wxCalendarDateAttr * self, const wxFont * font);
void wxCalendarDateAttr_SetHoliday(wxCalendarDateAttr * self, bool holiday);
void wxCalendarDateAttr_SetTextColour(wxCalendarDateAttr * self, const wxColour * col_text);
wxCalendarDateAttr *wxCalendarDateAttr_GetMark();
void wxCalendarDateAttr_SetMark(const wxCalendarDateAttr * m);
// CLASS: wxCalendarEvent
wxClassInfo *wxCalendarEvent_CLASSINFO();
wxCalendarEvent *wxCalendarEvent_new();
// CLASS: wxCaret
void wxCaret_delete(wxCaret *self);
wxCaret *wxCaret_new();
wxCaret *wxCaret_new1(wxWindow * window, int width, int height);
wxCaret *wxCaret_new2(wxWindow * window, const wxSize * size);
bool wxCaret_Create(wxCaret * self, wxWindow * window, int width, int height);
bool wxCaret_Create1(wxCaret * self, wxWindow * window, const wxSize * size);
void wxCaret_GetPosition(const wxCaret * self, int * x, int * y);
wxPoint *wxCaret_GetPosition1(const wxCaret * self);
void wxCaret_GetSize(const wxCaret * self, int * width, int * height);
wxSize *wxCaret_GetSize1(const wxCaret * self);
wxWindow * wxCaret_GetWindow(const wxCaret * self);
void wxCaret_Hide(wxCaret * self);
bool wxCaret_IsOk(const wxCaret * self);
bool wxCaret_IsVisible(const wxCaret * self);
void wxCaret_Move(wxCaret * self, int x, int y);
void wxCaret_Move1(wxCaret * self, const wxPoint * pt);
void wxCaret_SetSize(wxCaret * self, int width, int height);
void wxCaret_SetSize1(wxCaret * self, const wxSize * size);
void wxCaret_Show(wxCaret * self, bool show);
int wxCaret_GetBlinkTime();
void wxCaret_SetBlinkTime(int milliseconds);
// CLASS: wxCheckBox
wxClassInfo *wxCheckBox_CLASSINFO();
wxCheckBox *wxCheckBox_new();
wxCheckBox *wxCheckBox_new1(wxWindow * parent, wxWindowID id, const wxString * label, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
bool wxCheckBox_Create(wxCheckBox * self, wxWindow * parent, wxWindowID id, const wxString * label, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
bool wxCheckBox_GetValue(const wxCheckBox * self);
wxCheckBoxState wxCheckBox_Get3StateValue(const wxCheckBox * self);
bool wxCheckBox_Is3State(const wxCheckBox * self);
bool wxCheckBox_Is3rdStateAllowedForUser(const wxCheckBox * self);
bool wxCheckBox_IsChecked(const wxCheckBox * self);
void wxCheckBox_SetValue(wxCheckBox * self, bool state);
void wxCheckBox_Set3StateValue(wxCheckBox * self, wxCheckBoxState state);
// CLASS: wxCheckListBox
wxClassInfo *wxCheckListBox_CLASSINFO();
wxCheckListBox *wxCheckListBox_new();
wxCheckListBox *wxCheckListBox_new2(wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, const wxArrayString * choices, long style, const wxValidator * validator, const wxString * name);
bool wxCheckListBox_Create1(wxCheckListBox * self, wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, const wxArrayString * choices, long style, const wxValidator * validator, const wxString * name);
void wxCheckListBox_Check(wxCheckListBox * self, unsigned int item, bool check);
bool wxCheckListBox_IsChecked(const wxCheckListBox * self, unsigned int item);
unsigned int wxCheckListBox_GetCheckedItems(const wxCheckListBox * self, wxArrayInt * checked_items);
// Mix-in(s) to wxCheckListBox
wxItemContainer *wxCheckListBox_AsItemContainer(wxCheckListBox* obj);
// CLASS: wxChildFocusEvent
wxClassInfo *wxChildFocusEvent_CLASSINFO();
wxChildFocusEvent *wxChildFocusEvent_new(wxWindow * win);
wxWindow * wxChildFocusEvent_GetWindow(const wxChildFocusEvent * self);
// CLASS: wxChoice
wxClassInfo *wxChoice_CLASSINFO();
wxChoice *wxChoice_new();
wxChoice *wxChoice_new2(wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, const wxArrayString * choices, long style, const wxValidator * validator, const wxString * name);
bool wxChoice_Create1(wxChoice * self, wxWindow * parent, wxWindowID id, const wxPoint * pos, const wxSize * size, const wxArrayString * choices, long style, const wxValidator * validator, const wxString * name);
int wxChoice_GetColumns(const wxChoice * self);
int wxChoice_GetCurrentSelection(const wxChoice * self);
void wxChoice_SetColumns(wxChoice * self, int n);
bool wxChoice_IsSorted(const wxChoice * self);
// Mix-in(s) to wxChoice
wxItemContainer *wxChoice_AsItemContainer(wxChoice* obj);