wx-core/src/generated/ffi_c.rs

use super::*;

extern "C" {

    // wxCalculateLayoutEvent
    pub fn wxCalculateLayoutEvent_CLASSINFO() -> *mut c_void;
    pub fn wxCalculateLayoutEvent_new(id: c_int) -> *mut c_void;
    pub fn wxCalculateLayoutEvent_GetFlags(self_: *const c_void) -> c_int;
    pub fn wxCalculateLayoutEvent_GetRect(self_: *const c_void) -> *mut c_void;
    pub fn wxCalculateLayoutEvent_SetFlags(self_: *mut c_void, flags: c_int);
    pub fn wxCalculateLayoutEvent_SetRect(self_: *mut c_void, rect: *const c_void);

    // wxCalendarCtrl
    pub fn wxCalendarCtrl_CLASSINFO() -> *mut c_void;
    pub fn wxCalendarCtrl_SetDateRange(
        self_: *mut c_void,
        lowerdate: *const c_void,
        upperdate: *const c_void,
    ) -> bool;
    pub fn wxCalendarCtrl_GetDateRange(
        self_: *const c_void,
        lowerdate: *mut c_void,
        upperdate: *mut c_void,
    ) -> bool;
    pub fn wxCalendarCtrl_new() -> *mut c_void;
    pub fn wxCalendarCtrl_new1(
        parent: *mut c_void,
        id: c_int,
        date: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxCalendarCtrl_~wxCalendarCtrl(self_: *mut c_void);
    pub fn wxCalendarCtrl_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        date: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        name: *const c_void,
    ) -> bool;
    pub fn wxCalendarCtrl_EnableHolidayDisplay(self_: *mut c_void, display: bool);
    pub fn wxCalendarCtrl_EnableMonthChange(self_: *mut c_void, enable: bool) -> bool;
    pub fn wxCalendarCtrl_EnableYearChange(self_: *mut c_void, enable: bool);
    pub fn wxCalendarCtrl_GetAttr(self_: *const c_void, day: usize) -> *mut c_void;
    pub fn wxCalendarCtrl_GetDate(self_: *const c_void) -> *mut c_void;
    pub fn wxCalendarCtrl_GetHeaderColourBg(self_: *const c_void) -> *mut c_void;
    pub fn wxCalendarCtrl_GetHeaderColourFg(self_: *const c_void) -> *mut c_void;
    pub fn wxCalendarCtrl_GetHighlightColourBg(self_: *const c_void) -> *mut c_void;
    pub fn wxCalendarCtrl_GetHighlightColourFg(self_: *const c_void) -> *mut c_void;
    pub fn wxCalendarCtrl_GetHolidayColourBg(self_: *const c_void) -> *mut c_void;
    pub fn wxCalendarCtrl_GetHolidayColourFg(self_: *const c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxCalendarCtrl_HitTest(self_: *mut c_void, pos: *const c_void, date: *mut c_void, wd: *mut c_void) -> wxCalendarHitTestResult;
    pub fn wxCalendarCtrl_ResetAttr(self_: *mut c_void, day: usize);
    pub fn wxCalendarCtrl_SetAttr(self_: *mut c_void, day: usize, attr: *mut c_void);
    pub fn wxCalendarCtrl_SetDate(self_: *mut c_void, date: *const c_void) -> bool;
    pub fn wxCalendarCtrl_SetHeaderColours(
        self_: *mut c_void,
        col_fg: *const c_void,
        col_bg: *const c_void,
    );
    pub fn wxCalendarCtrl_SetHighlightColours(
        self_: *mut c_void,
        col_fg: *const c_void,
        col_bg: *const c_void,
    );
    pub fn wxCalendarCtrl_SetHoliday(self_: *mut c_void, day: usize);
    pub fn wxCalendarCtrl_SetHolidayColours(
        self_: *mut c_void,
        col_fg: *const c_void,
        col_bg: *const c_void,
    );
    pub fn wxCalendarCtrl_Mark(self_: *mut c_void, day: usize, mark: bool);

    // wxCalendarDateAttr
    pub fn wxCalendarDateAttr_delete(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxCalendarDateAttr_new(col_text: *const c_void, col_back: *const c_void, col_border: *const c_void, font: *const c_void, border: wxCalendarDateBorder) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxCalendarDateAttr_new1(border: wxCalendarDateBorder, col_border: *const c_void) -> *mut c_void;
    pub fn wxCalendarDateAttr_GetBackgroundColour(self_: *const c_void) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxCalendarDateAttr_GetBorder(self_: *const c_void) -> wxCalendarDateBorder;
    pub fn wxCalendarDateAttr_GetBorderColour(self_: *const c_void) -> *mut c_void;
    pub fn wxCalendarDateAttr_GetFont(self_: *const c_void) -> *mut c_void;
    pub fn wxCalendarDateAttr_GetTextColour(self_: *const c_void) -> *mut c_void;
    pub fn wxCalendarDateAttr_HasBackgroundColour(self_: *const c_void) -> bool;
    pub fn wxCalendarDateAttr_HasBorder(self_: *const c_void) -> bool;
    pub fn wxCalendarDateAttr_HasBorderColour(self_: *const c_void) -> bool;
    pub fn wxCalendarDateAttr_HasFont(self_: *const c_void) -> bool;
    pub fn wxCalendarDateAttr_HasTextColour(self_: *const c_void) -> bool;
    pub fn wxCalendarDateAttr_IsHoliday(self_: *const c_void) -> bool;
    pub fn wxCalendarDateAttr_SetBackgroundColour(self_: *mut c_void, col_back: *const c_void);
    // NOT_SUPPORTED: pub fn wxCalendarDateAttr_SetBorder(self_: *mut c_void, border: wxCalendarDateBorder);
    pub fn wxCalendarDateAttr_SetBorderColour(self_: *mut c_void, col: *const c_void);
    pub fn wxCalendarDateAttr_SetFont(self_: *mut c_void, font: *const c_void);
    pub fn wxCalendarDateAttr_SetHoliday(self_: *mut c_void, holiday: bool);
    pub fn wxCalendarDateAttr_SetTextColour(self_: *mut c_void, col_text: *const c_void);
    pub fn wxCalendarDateAttr_GetMark() -> *mut c_void;
    pub fn wxCalendarDateAttr_SetMark(m: *const c_void);

    // wxCalendarEvent
    pub fn wxCalendarEvent_CLASSINFO() -> *mut c_void;
    pub fn wxCalendarEvent_new() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxCalendarEvent_new1(win: *mut c_void, dt: *const c_void, type_: wxEventType) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxCalendarEvent_GetWeekDay(self_: *const c_void) -> wxDateTime::WeekDay;
    // NOT_SUPPORTED: pub fn wxCalendarEvent_SetWeekDay(self_: *mut c_void, day: wxDateTime::WeekDay);

    // wxCaret
    pub fn wxCaret_delete(self_: *mut c_void);
    pub fn wxCaret_new() -> *mut c_void;
    pub fn wxCaret_new1(window: *mut c_void, width: c_int, height: c_int) -> *mut c_void;
    pub fn wxCaret_new2(window: *mut c_void, size: *const c_void) -> *mut c_void;
    pub fn wxCaret_Create(
        self_: *mut c_void,
        window: *mut c_void,
        width: c_int,
        height: c_int,
    ) -> bool;
    pub fn wxCaret_Create1(self_: *mut c_void, window: *mut c_void, size: *const c_void) -> bool;
    pub fn wxCaret_GetPosition(self_: *const c_void, x: *mut c_void, y: *mut c_void);
    pub fn wxCaret_GetPosition1(self_: *const c_void) -> *mut c_void;
    pub fn wxCaret_GetSize(self_: *const c_void, width: *mut c_void, height: *mut c_void);
    pub fn wxCaret_GetSize1(self_: *const c_void) -> *mut c_void;
    pub fn wxCaret_GetWindow(self_: *const c_void) -> *mut c_void;
    pub fn wxCaret_Hide(self_: *mut c_void);
    pub fn wxCaret_IsOk(self_: *const c_void) -> bool;
    pub fn wxCaret_IsVisible(self_: *const c_void) -> bool;
    pub fn wxCaret_Move(self_: *mut c_void, x: c_int, y: c_int);
    pub fn wxCaret_Move1(self_: *mut c_void, pt: *const c_void);
    pub fn wxCaret_SetSize(self_: *mut c_void, width: c_int, height: c_int);
    pub fn wxCaret_SetSize1(self_: *mut c_void, size: *const c_void);
    pub fn wxCaret_Show(self_: *mut c_void, show: bool);
    pub fn wxCaret_GetBlinkTime() -> c_int;
    pub fn wxCaret_SetBlinkTime(milliseconds: c_int);

    // wxCheckBox
    pub fn wxCheckBox_CLASSINFO() -> *mut c_void;
    pub fn wxCheckBox_new() -> *mut c_void;
    pub fn wxCheckBox_new1(
        parent: *mut c_void,
        id: c_int,
        label: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxCheckBox_~wxCheckBox(self_: *mut c_void);
    pub fn wxCheckBox_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        label: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> bool;
    pub fn wxCheckBox_GetValue(self_: *const c_void) -> bool;
    pub fn wxCheckBox_Get3StateValue(self_: *const c_void) -> c_int;
    pub fn wxCheckBox_Is3State(self_: *const c_void) -> bool;
    pub fn wxCheckBox_Is3rdStateAllowedForUser(self_: *const c_void) -> bool;
    pub fn wxCheckBox_IsChecked(self_: *const c_void) -> bool;
    pub fn wxCheckBox_SetValue(self_: *mut c_void, state: bool);
    pub fn wxCheckBox_Set3StateValue(self_: *mut c_void, state: c_int);

    // wxCheckListBox
    pub fn wxCheckListBox_CLASSINFO() -> *mut c_void;
    pub fn wxCheckListBox_new() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxCheckListBox_new1(parent: *mut c_void, id: c_int, pos: *const c_void, size: *const c_void, n: c_int, choices: wxString, style: c_long, validator: *const c_void, name: *const c_void) -> *mut c_void;
    pub fn wxCheckListBox_new2(
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        choices: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxCheckListBox_Create(self_: *mut c_void, parent: *mut c_void, id: c_int, pos: *const c_void, size: *const c_void, n_strings: c_int, choices: wxString, style: c_long, validator: *const c_void, name: *const c_void) -> bool;
    pub fn wxCheckListBox_Create1(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        choices: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> bool;
    // DTOR: pub fn wxCheckListBox_~wxCheckListBox(self_: *mut c_void);
    pub fn wxCheckListBox_Check(self_: *mut c_void, item: c_uint, check: bool);
    pub fn wxCheckListBox_IsChecked(self_: *const c_void, item: c_uint) -> bool;
    pub fn wxCheckListBox_GetCheckedItems(
        self_: *const c_void,
        checked_items: *mut c_void,
    ) -> c_uint;
    // Mix-in(s) to wxCheckListBox
    pub fn wxCheckListBox_AsItemContainer(obj: *mut c_void) -> *mut c_void;

    // wxChildFocusEvent
    pub fn wxChildFocusEvent_CLASSINFO() -> *mut c_void;
    pub fn wxChildFocusEvent_new(win: *mut c_void) -> *mut c_void;
    pub fn wxChildFocusEvent_GetWindow(self_: *const c_void) -> *mut c_void;

    // wxChoice
    pub fn wxChoice_CLASSINFO() -> *mut c_void;
    pub fn wxChoice_new() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxChoice_new1(parent: *mut c_void, id: c_int, pos: *const c_void, size: *const c_void, n: c_int, choices: wxString, style: c_long, validator: *const c_void, name: *const c_void) -> *mut c_void;
    pub fn wxChoice_new2(
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        choices: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxChoice_~wxChoice(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxChoice_Create(self_: *mut c_void, parent: *mut c_void, id: c_int, pos: *const c_void, size: *const c_void, n: c_int, choices: wxString, style: c_long, validator: *const c_void, name: *const c_void) -> bool;
    pub fn wxChoice_Create1(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        choices: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> bool;
    pub fn wxChoice_GetColumns(self_: *const c_void) -> c_int;
    pub fn wxChoice_GetCurrentSelection(self_: *const c_void) -> c_int;
    pub fn wxChoice_SetColumns(self_: *mut c_void, n: c_int);
    pub fn wxChoice_IsSorted(self_: *const c_void) -> bool;
    // Mix-in(s) to wxChoice
    pub fn wxChoice_AsItemContainer(obj: *mut c_void) -> *mut c_void;
